use pretty title for beta releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -221,8 +221,8 @@ jobs:
               TITLE="$VERSION Nightly"
             fi
           elif [[ "$CHANNEL" == "beta" ]]; then
-            # Extract base version and beta number from X.Y.Z.bN
-            if [[ "$VERSION" =~ ^([0-9]+\.[0-9]+\.[0-9]+)\.b([0-9]+)$ ]]; then
+            # Extract base version and beta number from X.Y.ZbN
+            if [[ "$VERSION" =~ ^([0-9]+\.[0-9]+\.[0-9]+)b([0-9]+)$ ]]; then
               BASE="${BASH_REMATCH[1]}"
               BETA_NUM="${BASH_REMATCH[2]}"
               TITLE="$BASE Beta $BETA_NUM"
