--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,13 +38,10 @@ env:
   BASE_IMAGE_VERSION_NIGHTLY: "1.4.2"
 
 jobs:
-  validate-and-build:
-    name: Validate version and build Python artifact
+  preflight-checks:
+    name: Run tests and linting before release
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ inputs.version }}
-      is_prerelease: ${{ steps.validate.outputs.is_prerelease }}
-      base_image_version: ${{ steps.validate.outputs.base_image_version }}
       branch: ${{ steps.branch.outputs.branch }}
     steps:
       - name: Determine branch to use
@@ -60,9 +57,32 @@ jobs:
             echo "Using dev branch for $CHANNEL release"
           fi
 
+      - name: Trigger test workflow
+        uses: convictional/trigger-workflow-and-wait@v1.6.5
+        with:
+          owner: ${{ github.repository_owner }}
+          repo: server
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow_file_name: test.yml
+          ref: ${{ steps.branch.outputs.branch }}
+          wait_interval: 10
+          propagate_failure: true
+          trigger_workflow: true
+          wait_workflow: true
+
+  validate-and-build:
+    name: Validate version and build Python artifact
+    runs-on: ubuntu-latest
+    needs: preflight-checks
+    outputs:
+      version: ${{ inputs.version }}
+      is_prerelease: ${{ steps.validate.outputs.is_prerelease }}
+      base_image_version: ${{ steps.validate.outputs.base_image_version }}
+      branch: ${{ needs.preflight-checks.outputs.branch }}
+    steps:
       - uses: actions/checkout@v5
         with:
-          ref: ${{ steps.branch.outputs.branch }}
+          ref: ${{ needs.preflight-checks.outputs.branch }}
           fetch-depth: 0
 
       - name: Validate version number format
