--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-
 permissions:
   actions: write
   contents: write
@@ -67,7 +66,7 @@ jobs:
         with:
           owner: ${{ github.repository_owner }}
           repo: server
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PRIVILEGED_GITHUB_TOKEN }}
           workflow_file_name: test.yml
           ref: ${{ steps.branch.outputs.branch }}
           wait_interval: 10
