Optimizations to the AirPlay provider
- Some refactoring for code maintability
- Add late join support
- Prepare for AirPlay 2 (split up protocols)
- Various fixes for buffering

--- a/music_assistant/providers/airplay/manifest.json
+++ b/music_assistant/providers/airplay/manifest.json
@@ -10,5 +10,5 @@
   "multi_instance": false,
   "builtin": false,
   "icon": "cast-variant",
-  "mdns_discovery": ["_raop._tcp.local."]
+  "mdns_discovery": ["_airplay._tcp.local.", "_raop._tcp.local."]
 }
