--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ exclude = [
   '^music_assistant/providers/sonos/.*$',
   '^music_assistant/providers/snapcast/.*$',
   '^music_assistant/providers/ytmusic/.*$',
+  '^music_assistant/providers/airplay/protocols/airplay2.py',
 ]
 extra_checks = false
 local_partial_types = true
