Typing fixes for the Radio media controller (#2574)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,13 @@ enable_error_code = [
 exclude = [
   '^music_assistant/controllers/cache.py$',
   '^music_assistant/controllers/config.py$',
-  '^music_assistant/controllers/media/.*$',
+  '^music_assistant/controllers/media/albums.py*$',
+  '^music_assistant/controllers/media/artists.py*$',
+  '^music_assistant/controllers/media/audiobooks.py*$',
+  '^music_assistant/controllers/media/base.py*$',
+  '^music_assistant/controllers/media/playlists.py*$',
+  '^music_assistant/controllers/media/podcasts.py*$',
+  '^music_assistant/controllers/media/tracks.py*$',
   '^music_assistant/controllers/music.py$',
   '^music_assistant/controllers/player_queues.py$',
   '^music_assistant/controllers/streams.py$',
