--- a/music_assistant/providers/ytmusic/manifest.json
+++ b/music_assistant/providers/ytmusic/manifest.json
@@ -7,7 +7,8 @@
   "codeowners": ["@MarvinSchenkel"],
   "requirements": [
     "ytmusicapi==1.11.1",
-    "duration-parser==1.0.1"
+    "duration-parser==1.0.1",
+    "deno==2.5.6"
   ],
   "documentation": "https://music-assistant.io/music-providers/youtube-music/",
   "multi_instance": true
