--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,8 @@ mass = "music_assistant.__main__:main"
 
 [tool.codespell]
 # explicit is misspelled in the iTunes API
-ignore-words-list = "provid,hass,followings,childs,explict,commitish,"
+# "additionals" is a fixed field name from the Nicovideo API fixtures
+ignore-words-list = "provid,hass,followings,childs,explict,additionals,commitish,"
 skip = """*.js,*.svg,\
 music_assistant/providers/itunes_podcasts/itunes_country_codes.json,\
 """
