--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -39,6 +39,7 @@ mashumaro==3.17
 music-assistant-frontend==2.17.9
 music-assistant-models==1.1.70
 mutagen==1.47.0
+niconico.py-ma==2.1.0.post1
 orjson==3.11.4
 pillow==11.3.0
 pkce==1.0.3
