Add pytz dependency to bbc sounds provider

--- a/music_assistant/providers/bbc_sounds/manifest.json
+++ b/music_assistant/providers/bbc_sounds/manifest.json
@@ -8,7 +8,8 @@
     "@kieranhogg"
   ],
   "requirements": [
-    "auntie-sounds==1.1.1"
+    "auntie-sounds==1.1.1",
+    "pytz==2025.2"
   ],
   "multi_instance": false
 }
