--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -54,6 +54,7 @@ pycryptodome==3.23.0
 pylast==6.0.0
 python-fullykiosk==0.0.14
 python-slugify==8.0.4
+pytz==2025.2
 pywidevine==1.9.0
 radios==0.3.2
 rokuecp==0.19.5
