--- a/pyproject.toml
+++ b/pyproject.toml
@@ -164,6 +164,10 @@ line-ending = "lf"
 [tool.pytest.ini_options]
 addopts = "--cov music_assistant"
 asyncio_mode = "auto"
+filterwarnings = [
+  # Suppress Python 3.13 AsyncMock internal warnings about unawaited coroutines
+  "ignore:coroutine.*was never awaited:RuntimeWarning",
+]
 
 [tool.ruff.lint]
 ignore = [
